--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar color="primary">
   <span><img src="/assets/images/logo.png" height=30 width=41></span>
-  <a mat-button routerLink="/home"><span class="fa fa-home fa-lg"></span> Home</a>
-  <a mat-button><span class="fa fa-info fa-lg"></span> About</a>
-  <a mat-button routerLink="/menu"><span class="fa fa-list fa-lg"></span> Menu</a>
-  <a mat-button><span class="fa fa-address-card fa-lg"></span> Contact</a>
+  <a mat-button routerLink="/home" routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Home</a>
+  <a mat-button><span class="fa fa-info fa-lg" routerLinkActive="active"></span> About</a>
+  <a mat-button routerLink="/menu" routerLinkActive="active"><span class="fa fa-list fa-lg"></span> Menu</a>
+  <a mat-button routerLink="/contactus" routerLinkActive="active"><span class="fa fa-address-card fa-lg"></span> Contact</a>
 </mat-toolbar>
 
 <div class="container jumbotron"
@@ -17,7 +17,8 @@
 
   <div fxFlex fxFlex.gt-sm="50%">
     <h1>Ristorante Con Fusion</h1>
-    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations
+    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking
+      creations
       will tickle your culinary senses!</p>
   </div>
   <div fxFlex fxFlex.gt-sm="20%">
