optimised mat-list to match abouts us section with spec

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -59,18 +59,16 @@
 
 
   <div fxFlex>
-    <h2>Corporate Leadership</h2>
+    <h3>Corporate Leadership</h3>
 
-    <mat-grid-list cols="1" rowHeight="200px">
-      <mat-grid-tile *ngFor="let leader of leaders">
+    <mat-list cols="1" rowHeight="200px">
+      <mat-list-item  *ngFor="let leader of leaders">
         <img matListAvatar src={{leader.image}} alt={{leader.name}}>
-        <mat-list>
-          <mat-list-item>{{leader.name }}</mat-list-item>
-          <mat-list-item>{{leader.designation }}</mat-list-item>
-          <mat-list-item>{{leader.description }}</mat-list-item>
-        </mat-list>
-      </mat-grid-tile>
-    </mat-grid-list>
+          <h4 mat-line>{{leader.name }}</h4>
+          <h4 mat-line>{{leader.designation }}</h4>
+          <h4 mat-line>{{leader.description }}</h4>
+      </mat-list-item >
+    </mat-list>
 
 
   </div>
