--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -61,7 +61,7 @@
   <div fxFlex>
     <h3>Corporate Leadership</h3>
 
-    <mat-list cols="1" rowHeight="200px">
+    <mat-list cols="1" rowHeight="200px" *ngIf="leaders">
       <mat-list-item  *ngFor="let leader of leaders">
         <img matListAvatar src={{leader.image}} alt={{leader.name}}>
           <h4 mat-line>{{leader.name }}</h4>
@@ -69,7 +69,9 @@
           <h4 mat-line>{{leader.description }}</h4>
       </mat-list-item >
     </mat-list>
-
+    <div [hidden]="leaders">
+      <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
 
   </div>
 </div>
