--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,6 +18,10 @@
       </p>
     </mat-card-content>
   </mat-card>
+  <div [hidden]="dish">
+    <mat-spinner></mat-spinner>
+    <h4>Loading . . . Please Wait</h4>
+  </div>
 
   <mat-card *ngIf="promotion" fxFlex>
     <mat-card-header>
@@ -32,6 +36,10 @@
       </p>
     </mat-card-content>
   </mat-card>
+  <div [hidden]="promotion">
+    <mat-spinner></mat-spinner>
+    <h4>Loading . . . Please Wait</h4>
+  </div>
 
   <mat-card *ngIf="featuredLeader" fxFlex>
     <mat-card-header>
@@ -48,5 +56,9 @@
       </p>
     </mat-card-content>
   </mat-card>
+  <div [hidden]="featuredLeader">
+    <mat-spinner></mat-spinner>
+    <h4>Loading . . . Please Wait</h4>
+  </div>
 
 </div>
