enabled login dialog from login link in header

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,8 @@
   <mat-dialog-actions>
     <span class="flex-spacer"></span>
     <button mat-button mat-dialog-close>Cancel</button>
-    <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="loginForm.form.invalid">
+    <button type="submit" mat-button class="background-primary text-floral-white"
+            [disabled]="loginForm.form.invalid">
       Login
     </button>
   </mat-dialog-actions>
