--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,7 +6,7 @@
      fxLayoutGap="10px"
      fxLayoutGap.xs="0">
 
-  <mat-grid-list cols="2" rowHeight="200px">
+  <mat-grid-list cols="2" >
 
     <!-- Dish name and Description-->
     <div fxFlex="40" *ngIf="dish">
