--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,7 +6,7 @@
      fxLayoutGap="10px"
      fxLayoutGap.xs="0">
 
-  <mat-grid-list cols="2" >
+  <mat-grid-list cols="2">
 
     <!-- Dish name and Description-->
     <div fxFlex="40" *ngIf="dish">
@@ -55,8 +55,38 @@
           <div>-- {{dishReview.author }}  {{ dishReview.date | date}}</div>
         </mat-card-content>
       </mat-card>
-
+      <!--      <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>-->
+      <mat-card>
+        <form novalidate [formGroup]="feedbackForm" #commentForm='ngForm' (ngSubmit)="onSubmit()">
+          <div>
+            <mat-form-field class="full-width">
+              <input matInput formControlName="author" placeholder="Name" type="text" required>
+            </mat-form-field>
+            <mat-error *ngIf="formErrors.author">
+              {{formErrors.author}}
+            </mat-error>
+          </div>
+          <div>
+            <mat-slider formControlName="rating"
+                        thumbLabel
+                        tickInterval="1"
+                        min="1" max="5" step="1" (input)="onInputChange($event)">
+            </mat-slider>
+          </div>
+          <div>
+            <mat-form-field class="full-width">
+            <textarea matInput formControlName="comment" placeholder="Your Comment"
+                      rows=12 required></textarea>
+            </mat-form-field>
+            <mat-error *ngIf="formErrors.comment">
+              {{formErrors.comment}}
+            </mat-error>
+          </div>
+          <button type="submit" mat-button class="background-primary text-floral-white">Submit</button>
+        </form>
+      </mat-card>
     </div>
+
   </mat-grid-list>
 
 </div>
